30.11.2013 git
- added $keep_private option to serve deltasql via https:// and to hide everything if user is not logged in.
- updated FAQ on exposing deltasql to the Internet
- fixed some missing <?php session_start(); ?> on several pages
- clicking on logo on top returns back to main page also for Open Source Edition.

*******************************
1.6.4 Release Notes (4.10.2013)

  Maintenance release with major fixes and visual enhancements to deltasql server, in order to stabilize the
  1.6.x line. 
  - Added automatic branch selection when creating synchronization table. 
  - Fixes to the branch selection in the main synchronization form.
  - Same fixes applied also to deltaclient for Windows
  - The dbredactor client includes now a JDBC driver for sqlite databases.
  - Favicon and other visual enhancements 
*******************************

2.10.2013 git
Bugfixes:
- when pressing Back button dbsync form did not work
- synchronizing from BRANCH_X to BRANCH_X was not shown in selection of synchronization form
- same fix applied also to deltaclient for Windows

29.9.2013 git
- Dynamic branch selection also in Get Synchronization Table

26.9.2013 git
- Reorganized navigation bar creating Utils section with deltasql clients and toolbox

22.09.2013 git
- added favicon on all deltasql pages
- added twitter follow me on deltasql webpage
- added matrix banner to Open Source Edition

20.09.2013 git
- added Get Synchronization Table as indipendent menu entry, both in the navigation bar and on the main page

19.9.2013 git
- added sqlite driver and support to dbredactor client

2.9.2013 git
- fixed warning in synchronization form when project, from or to branches are missing.

*******************************
1.6.3 Release Notes (1.9.2013)
 
  Major features: New toolbox page listing tools which help in script creation
				  The first two tools support creation of INSERT scripts, and
				  of INSERT,UPDATE,DELETE scripts based on .csv exported from your SQL client.